--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,10 @@ Fbld Kickoff:
 * Flesh out unit tests as needed until PrimesTest and UBNat tests work.
 
 Fbld Cleanup:
+* Update comments on FbldCompile functions to clarify assumptions about the
+  input program, namely that entity modules have already been resolved.
+* Update comments on FbldCheck functions to clarify that module names are
+  resolved as a side effect.
 * Define an FbldNamesEqual function instead of using strcmp everywhere.
 * Refactor fbld compile.c so it doesn't need LookupMDefn, LookupDecl, and
   ResolveModule?
