--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
 Fbld Kickoff:
+1. Figure out how to deal with resolving names
+  - pass the module context around and traverse in some nice way?
+  - or fully qualify everything ahead of time?
+2. Change compile to save compiled decls by FbldDecl*, not by name?
+3. Add support for printing values, passing around types by name.
+4. Add type field to FbldExpr, fill it in during check and reuse it during
+compile rather than recomputing types there.
 * Port rest of unit tests from fblc to fbld until PrimesTest and UBnat tests
   work.
 * Flesh out unit tests as needed until PrimesTest and UBNat tests work.
@@ -20,6 +27,8 @@ Fbld Cleanup:
   expression. Return type name instead of Decl?
 * Add support for returning multiple errors from check.
 * Factor out common code for checking types match in fbld check.
+* Cleanup fbld types to have less pointers - don't include an indirection just
+  because it makes parsing easier. Copy values in parser as needed instead.
 
 Fblc Front End Cleanup:
 * Make fblcs structure standalone rather than tied to fblc structure.
