--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Fbld Cleanup:
 * Document that parse returns FBLC_NULL_ID for field ids and check fills in
   field ids.
-* Remove type tracking from FbldCompileExpr, because it should no longer need
-  it.
+* Do variable id tracking in 'check' to be reused in 'compile' rather than
+  recomputed?
 * Update comments on FbldCompile functions to clarify assumptions about the
   input program, namely that entity modules have already been resolved.
 * Update comments on FbldCheck functions to clarify that module names are
