--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
 Fbld Test:
-* Port remainder of fblc tests to fbld.
 * Test case when struct or union type is not redeclared in mdefn from mdecl.
 * Test case when an mdefn decl doesn't match its corresponding mdecl decl.
 * Test case when abstract type is used as select for conditional.
@@ -9,6 +8,7 @@ Fbld Test:
 * Test case when type from module not listed as a dependency is used as obj
   for field access.
 * Test all ways an mdefn decl can mismatch against an mdecl decl.
+* Port remainder of fblc tests to fbld.
 
 Fbld Cleanup:
 * Document that parse returns FBLC_NULL_ID for field ids and check fills in
@@ -19,10 +19,11 @@ Fbld Cleanup:
   resolved as a side effect.
 * Define FBLD_*_EXPR tags separate from FBLC_*_EXPR tags.
 * Don't allocate and leak FbldLocs like crazy in the lexer/parser.
-* Better organize the contents parse.y.
+* Better organize the contents of parse.y.
 * Add support for returning multiple errors from check.
 * Cleanup fbld types to have less pointers - don't include an indirection just
   because it makes parsing easier. Copy values in parser as needed instead.
+* Use consistent style for error messages. Capitalize? Punctuate?
 
 Fbld Application:
 * Set up vector graphics interface.
