Update the proposed syntax for fbld.
Allow qualified references everywhere, but use '<' and '>' instead of '(' and
')' for interfaces and modules.

Still many tests need to be converted to the new proposed language, but
probably better to hold off until the new proposed language has stablized
more.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+Fbld M2 Kickoff:
+* Figure out how to adapt fbld for new syntax and polymorphism support.
+
 Fbld Test:
 * Test case when struct or union type is not redeclared in mdefn from mdecl.
 * Test case when an mdefn decl doesn't match its corresponding mdecl decl.
